# django-pyturso

./: .gitignore  AGENTS.md  NATIVE_PLATFORM_CI.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: dependency-review-config.yml  pull_request_template.md
.github/workflows/: codeql.yml  create-draft-release.yml  dependabot-auto-merge.yml  draft-release-notes.yml  hardening.yml  python-package.yml  python-publish.yml  verify-release.yml
artifacts/performance/: pytest-benchmark.json
artifacts/performance/report/: performance-report.json  performance-report.md
artifacts/performance/strict-report/: performance-report.json  performance-report.md
artifacts/release/: evidence.json
artifacts/reviews/: council-review.md  mutation-baseline.md
docs/: architecture.md  capabilities.md  compatibility.md  configuration.md  index.md  performance.md  releasing.md  review-policy.md  roadmap.md  security.md  switching.md  test-runner.md  testing-coverage.md  testing-hardening.md  testing-upstream.md  testing.md  transactions.md
docs/design/: backend-contract.md  django-provenance.md
docs/design/evidence/: constraint-lifecycle.md  django-feature-disposition.md  driver-platform-matrix.md  file-lifecycle.md  migration-corpus.md  remote-platform-matrix.json  temporal-sql.md  transaction-state-machine.md
scripts/: __init__.py  build_distributions.py  check_coverage_floors.py  check_reproducible_builds.py  generate_release_evidence.py  generate_sbom.py  run_coverage.py  run_dependency_audit.py  run_django_upstream.py  run_hardening.py  validate_review_metadata.py  validate_sbom.py  validate_security.py  validate_traceability.py  verify_packages.py  workflow_policy.py
scripts/probes/: driver_contract.py
src/django_pyturso/: __init__.py  base.py  client.py  creation.py  features.py  introspection.py  operations.py  schema.py
tests/: __init__.py  coverage-floors.json  support.py  test_package.py
tests/architecture/: test_boundaries.py  test_coverage_policy.py  test_hardening_workflow.py  test_release_evidence.py  test_release_workflow.py  test_review_metadata.py  test_traceability_validator.py
tests/core/: test_base_branches.py  test_base_contracts.py  test_client.py  test_connection.py  test_creation.py  test_features.py  test_introspection.py  test_migration_corpus.py  test_mutation_schema_alter.py  test_mutation_schema_exit.py  test_mutation_schema_remake_fields.py  test_mutation_schema_remake_finalize.py  test_mutation_schema_remake_options.py  test_operations.py  test_orm.py  test_schema.py  test_schema_alteration.py  test_schema_branches.py  test_schema_table_remake_fields.py  test_schema_table_remake_finalization.py  test_support_branches.py  test_support_modules.py
tests/core/constraints/: __init__.py  test_foreign_keys.py
tests/core/transactions/: test_state_machine.py
tests/differential/: __init__.py  file_interop_runner.py  runner.py  test_scenarios.py
tests/driver_contract/: test_driver_probe.py
tests/fault_injection/: test_connection_initialization.py
tests/integration/: test_test_runner.py  test_user_paths.py
tests/manifests/: differential-scenarios.toml  security-exceptions.toml  support-traceability.toml  upstream-expectations.toml
tests/performance/: __init__.py  conftest.py  report.py  scenarios.py  test_report.py  test_workloads.py
tests/project/: __init__.py  admin.py  apps.py  forms.py  live_server_case.py  manage.py  mirror_case.py  models.py  serialized_case.py  tests.py  urls.py
tests/project/fixtures/: entries.json
tests/project/migrations/: 0001_initial.py
tests/property/: test_cursor_and_values.py  test_transaction_sequences.py
tests/security/: __init__.py  test_database_paths.py  test_security_policy.py  test_sql_inputs.py
tests/settings/: __init__.py  base.py  sqlite.py  turso_file.py  turso_file_mirror.py  turso_memory.py  turso_memory_mirror.py
tests/snapshots/performance/: correctness.json  query-caps.json  timing-budgets.json
tests/snapshots/schema/: migration-corpus.json
tests/stress/: _crash_writer.py  test_file_recovery_and_resources.py
tests/unit/: test_base_branches.py  test_features.py  test_mutation_base.py  test_mutation_operations.py
tests/upstream/: __init__.py  django_pyturso_upstream_settings.py  test_upstream_manifest.py
