[project]
name = "django-pyturso"
dynamic = ["version"]
description = "A Django database backend for the embedded Turso database engine"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "B.T. Franklin" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["Django>=6.0.7", "pyturso>=0.7.0"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "django-stubs>=6.0.6",
    "hypothesis>=6.156.6",
    "pytest-timeout>=2.4.0",
    "build>=1.5.1",
    "psutil>=7.2.2",
]

[build-system]
requires = ["pdm-backend>=2.4.9"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[tool.pdm.scripts]
lint = "ruff check ."
typecheck = "mypy src tests"
test = "pytest"
test-fast = "pytest --maxfail=1 -m 'not integration and not stress'"
test-differential = "pytest -m differential"
test-integration = "pytest -m integration"
test-stress = "pytest -m stress"
build = "pdm build"
package-test = "python scripts/verify_packages.py"
verify-release = "python scripts/verify_packages.py"
check = { composite = ["lint", "typecheck", "test-fast"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings.turso_memory"
markers = [
    "core: complete supported core-backend behavior",
    "differential: SQLite and Turso scenario comparison",
    "integration: cross-component and subprocess integration",
    "stress: long-running and recovery evidence",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["mutants"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings.turso_memory"
